--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ buildscript {
     ext.crashlytics_gradle_version = "2.7.1"
     ext.androidx_activity_version ="1.3.1"
     ext.androidx_fragment_version ="1.3.6"
+    ext.chunkLibrary = "1.1.0"
 
     repositories {
         google()
