--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.genubank.app"
+        applicationId "com.mercadolibre.cristhianbonilla.mercadolibre"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 2
@@ -39,13 +39,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    android.applicationVariants.all { variant ->
-        variant.outputs.all {
-            def appName = APP_NAME
-
-            outputFileName = "GenuBank-${appName}-" + "${variant.versionName}.apk"
-        }
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
