--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ buildscript {
     ext.androidx_activity_version ="1.3.1"
     ext.androidx_fragment_version ="1.3.6"
     ext.chunkLibrary = "1.1.0"
+    ext.mockitoKotlin = "2.2.0"
 
     repositories {
         google()
